--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <a href="#"><i class="fab fa-github"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
         </div>
-        <p><a href="registration.html" style="text-decoration: none; color: #007BFF;">Register</a></p>
+        <p><a href="register.html" style="text-decoration: none; color: #007BFF;">Register</a></p>
     </div>
 
     <div class="container1">
